 - Fixed issue #313: Translucent selection rectangle completely broken when PaintBackground is used
 - Fixed issue #314: Only if toAutoSort is True non-expanded nodes will be excluded from sorting. 
   This restores the behavior of V5.0.X. 
 - Fixed issue #306: Drag image was broken except for CF_HDROP
 - Fixed issue #305: Broken hint drawing with classic windows theme and toUseExplorerTheme
 - Fixed issue #298: Bad canvas parameters in OnBeforeCellPaint method
 - Added fix for ugly drawn disabled images (thx to S. Glienke). See also: 
   http://stackoverflow.com/questions/6003018/make-disabled-menu-and-toolbar-images-look-better
   http://qc.embarcadero.com/wc/qcmain.aspx?d=86879
 - Removed file VTConfig.inc. The former $ifdef ReverseFullExpandHotKey is now a flag in the 
   TVTMiscOption enumeration. The $ifdef TntSupport can be defined at the beginning of the unit VirtualTrees.

- Improved creation of IDragSourceHelper and added support for IDragSourceHelper2
 - Fixed problem with drawing selection rectangle after canceled rename

October 04, 2012
 - Fixed issue regarding activating explorer theme

September 14, 2012
 - Fixed issue #222: FDottedBrush is never released in the tree is never shown

September 11, 2012
 - Fixed issue #52: Misalignement of CheckBox and TreeLine/Buttons
 - Fixed issue #43: VT stop repaint after Windows visual style change

September 10, 2012
 - Fixed issue #66: column auto-resize makes not aware of StaticText
 - Fixed issue #53: Misalignment Images Columns > 0
 - Fixed issue #176: Multiline Aligment Problem
 - Fixed issue #283: VTV no longer allows to drop above or below when using Full row selection
 - Fixed issue #173: Two suggestions about class member visibilities
 - Fixed issue #192: Fixed column painting bug when OffsetX > 0

 - Bug fix: Functions GetLastVisible and GetLastVisibleNoInit return correct results even if some anchestor of the last visible node is not effectively visible